# platform.core.system.sys-assert

./: AUTHORS  CMakeLists.txt  build.sh  coredumpctrl.sh  project.config  sys-assert.manifest
core-launcher/: CMakeLists.txt  core-launcher.c
debian/: README.Debian  changelog  control  copyright  libsys-assert-0.install.in  libsys-assert-0.postinst  org.tizen.blue-screen.install.in  rules
lockupinfo/: 92-rb-dump.rules  CMakeLists.txt  _util_log.h  lockupinfo.c  lockupinfo.sh
packaging/: sys-assert.changes  sys-assert.manifest  sys-assert.spec  sys-assert.spec.orig
sys-assert/: .debugmode  CMakeLists.txt  sys-assert.c  sys-assert.init.sh  sys-assert.pc
sys-assert/init/: sys-assert.service
sys-assert/src/: _logic.c  _logic.h  format  sys-assert.c  sys-assert.h
sys-assert/sysctl.d/: sys-assert.conf  sys-assert.conf.in
