CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sys-assert C)

SET(SRCS
	src/sys-assert.c
)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(LIBDIR "\${prefix}/lib")

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED libunwind libtzplatform-config)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DEAPI")
ADD_DEFINITIONS("-DDEBUG_ON")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} -ldl)

INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${LIB_INSTALL_DIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/.debugmode DESTINATION ${TZ_SYS_ETC})

IF("${SYS_ASSERT_ENABLE}" STREQUAL "yes")
CONFIGURE_FILE( sysctl.d/sys-assert.conf.in sysctl.d/sys-assert.conf)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sysctl.d/sys-assert.conf DESTINATION /usr/lib/sysctl.d)
ENDIF("${SYS_ASSERT_ENABLE}" STREQUAL "yes")
